perf(deploy): 补充文档。

--- a/docs/创建知识库/知识库概述.md
+++ b/docs/创建知识库/知识库概述.md
@@ -1,5 +1,8 @@
 # 知识库编辑面板概述
 
+## 创建和编辑知识库
+
+
 ## 视图模式
 
 - 单元模式
@@ -12,7 +15,7 @@
 - 编辑模式
 
 ## 头部操作栏
-
+[链接](./1.创建知识库.md)
 - logo
 - 知识库标题
 - 知识库 ***信息编辑*** 入口
